--- a/AnotherWebProgFinals/AnotherWebProgFinals.csproj
+++ b/AnotherWebProgFinals/AnotherWebProgFinals.csproj
@@ -79,6 +79,7 @@
     </Content>
     <Content Include="css\blog\style.css" />
     <Content Include="css\dropify.css" />
+    <Content Include="css\page-center.css" />
     <Content Include="images\1.jpg" />
     <Content Include="images\2.jpg" />
     <Content Include="images\3.jpg" />
