--- a/AnotherWebProgFinals/AnotherWebProgFinals.csproj
+++ b/AnotherWebProgFinals/AnotherWebProgFinals.csproj
@@ -48,6 +48,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Activities" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -80,6 +81,7 @@
     <Content Include="css\blog\style.css" />
     <Content Include="css\dropify.css" />
     <Content Include="css\page-center.css" />
+    <Content Include="font\dropify\dropify.svg" />
     <Content Include="images\1.jpg" />
     <Content Include="images\2.jpg" />
     <Content Include="images\3.jpg" />
@@ -114,6 +116,9 @@
     <Content Include="js\dropify.js" />
     <Content Include="js\plugins.min.js" />
     <Content Include="packages.config" />
+    <Content Include="font\dropify\dropify.eot" />
+    <Content Include="font\dropify\dropify.ttf" />
+    <Content Include="font\dropify\dropify.woff" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
