--- a/AnotherWebProgFinals/AnotherWebProgFinals.csproj
+++ b/AnotherWebProgFinals/AnotherWebProgFinals.csproj
@@ -80,6 +80,7 @@
     </Content>
     <Content Include="css\blog\style.css" />
     <Content Include="css\dropify.css" />
+    <Content Include="css\mycustomcss.css" />
     <Content Include="css\page-center.css" />
     <Content Include="font\dropify\dropify.svg" />
     <Content Include="images\1.jpg" />
