--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,9 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+.vs/AnotherWebProgFinals/v14/.suo
+AnotherWebProgFinals/bin/AnotherWebProgFinals.dll
+AnotherWebProgFinals/bin/AnotherWebProgFinals.pdb
+AnotherWebProgFinals/obj/Debug/AnotherWebProgFinals.dll
+AnotherWebProgFinals/obj/Debug/AnotherWebProgFinals.pdb
+*.suo
