--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,8 @@ AnotherWebProgFinals/obj/Debug/AnotherWebProgFinals.dll
 AnotherWebProgFinals/obj/Debug/AnotherWebProgFinals.pdb
 *.suo
 *.MP4
+AnotherWebProgFinals/obj/Debug/AnotherWebProgFinals.dll
+AnotherWebProgFinals/obj/Debug/AnotherWebProgFinals.dll
+AnotherWebProgFinals/obj/Debug/AnotherWebProgFinals.dll
+.vs/AnotherWebProgFinals/v14/.suo
+AnotherWebProgFinals/bin/AnotherWebProgFinals.pdb
