--- a/AnotherWebProgFinals/AnotherWebProgFinals.csproj
+++ b/AnotherWebProgFinals/AnotherWebProgFinals.csproj
@@ -141,9 +141,16 @@
     <Content Include="User\history_para.aspx" />
     <Content Include="User\localofficials.aspx" />
     <Content Include="User\Municipal_Profile.aspx" />
+    <Content Include="User\tourism_1town1product.aspx" />
+    <Content Include="User\tourism_festivities.aspx" />
+    <Content Include="User\tourism_foods.aspx" />
+    <Content Include="User\tourism_historical.aspx" />
+    <Content Include="User\tourism_landmarks.aspx" />
+    <Content Include="User\tourism_wheretostay.aspx" />
     <Content Include="User\viewAnnouncement.aspx" />
     <Content Include="User\viewEvent.aspx" />
     <Content Include="user_login.aspx" />
+    <Content Include="WebForm1.aspx" />
     <Content Include="WebUserMaster.Master" />
     <Content Include="WebAdminMaster.Master" />
     <Content Include="WebLog.Master" />
@@ -256,6 +263,48 @@
     <Compile Include="User\Municipal_Profile.aspx.designer.cs">
       <DependentUpon>Municipal_Profile.aspx</DependentUpon>
     </Compile>
+    <Compile Include="User\tourism_1town1product.aspx.cs">
+      <DependentUpon>tourism_1town1product.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User\tourism_1town1product.aspx.designer.cs">
+      <DependentUpon>tourism_1town1product.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="User\tourism_festivities.aspx.cs">
+      <DependentUpon>tourism_festivities.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User\tourism_festivities.aspx.designer.cs">
+      <DependentUpon>tourism_festivities.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="User\tourism_foods.aspx.cs">
+      <DependentUpon>tourism_foods.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User\tourism_foods.aspx.designer.cs">
+      <DependentUpon>tourism_foods.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="User\tourism_historical.aspx.cs">
+      <DependentUpon>tourism_historical.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User\tourism_historical.aspx.designer.cs">
+      <DependentUpon>tourism_historical.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="User\tourism_landmarks.aspx.cs">
+      <DependentUpon>tourism_landmarks.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User\tourism_landmarks.aspx.designer.cs">
+      <DependentUpon>tourism_landmarks.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="User\tourism_wheretostay.aspx.cs">
+      <DependentUpon>tourism_wheretostay.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User\tourism_wheretostay.aspx.designer.cs">
+      <DependentUpon>tourism_wheretostay.aspx</DependentUpon>
+    </Compile>
     <Compile Include="User\viewAnnouncement.aspx.cs">
       <DependentUpon>viewAnnouncement.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -283,6 +332,13 @@
     </Compile>
     <Compile Include="WebAdminMaster.Master.designer.cs">
       <DependentUpon>WebAdminMaster.Master</DependentUpon>
+    </Compile>
+    <Compile Include="WebForm1.aspx.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebForm1.aspx.designer.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
     </Compile>
     <Compile Include="WebLog.Master.cs">
       <DependentUpon>WebLog.Master</DependentUpon>
