--- a/AnotherWebProgFinals/Web.config
+++ b/AnotherWebProgFinals/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="webprog" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\rypzr\Documents\GitHub\AnotherWebProgFinals\AnotherWebProgFinals\App_Data\webprog.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="webprog" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\arian\Documents\AnotherWebProgFinals\AnotherWebProgFinals\App_Data\webprog.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5"/>
