--- a/AnotherWebProgFinals/bin/AnotherWebProgFinals.dll.config
+++ b/AnotherWebProgFinals/bin/AnotherWebProgFinals.dll.config
@@ -4,12 +4,31 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <configSections>
+    <sectionGroup name="system.web">
+      <section name="sanitizer" requirePermission="false"
+               type="AjaxControlToolkit.Sanitizer.ProviderSanitizerSection, AjaxControlToolkit" />
+    </sectionGroup>
+  </configSections>
   <connectionStrings>
     <add name="webprog" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\arian\Documents\AnotherWebProgFinals\AnotherWebProgFinals\App_Data\webprog.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5"/>
     <httpRuntime targetFramework="4.5"/>
+    <trust level="Full" />
+    <sanitizer defaultProvider="HtmlAgilityPackSanitizerProvider">
+      <providers>
+        <add name="HtmlAgilityPackSanitizerProvider"
+             type="AjaxControlToolkit.Sanitizer.HtmlAgilityPackSanitizerProvider"></add>
+      </providers>
+    </sanitizer>
+    <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID">
+      <controls>
+        <add tagPrefix="ajaxToolkit" assembly="AjaxControlToolkit" namespace="AjaxControlToolkit" />
+        <add tagPrefix="asp" namespace="System.Web.UI.WebControls" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+      </controls>
+    </pages>
   </system.web>
   <system.codedom>
     <compilers>
