--- a/AnotherWebProgFinals/bin/AnotherWebProgFinals.dll.config
+++ b/AnotherWebProgFinals/bin/AnotherWebProgFinals.dll.config
@@ -11,7 +11,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="webprog" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\arian\Documents\AnotherWebProgFinals\AnotherWebProgFinals\App_Data\webprog.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="webprog" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|webprog.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5"/>
